--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "include/Soundpipe"]
 	path = include/Soundpipe
 	url = https://github.com/PaulBatchelor/Soundpipe.git
+[submodule "include/Sporth"]
+	path = include/Sporth
+	url = ../Sporth
